concordium-std/tests/derive-serial/fail-colliding-tag.stderr
error: The tag of 'Two' collides with the tag of 'One'.
 --> tests/derive-serial/fail-colliding-tag.rs:9:18
  |
9 |     #[concordium(tag = 42)]
  |                  ^^^

error: The tag of 'One' collides with the tag of 'Two'.
 --> tests/derive-serial/fail-colliding-tag.rs:7:18
  |
7 |     #[concordium(tag = 42)]
  |                  ^^^
